tests/NormalTests/paczka1/small_fuzzy/35207207.err
Error in line 4: LcCLk4Tm0X A701 33,28
Error in line 2: a3EsWJfIi S553 41,0
Error in line 1: qTaDrOXR2E2 A24 96,4
